# antigravity-cli-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRATO_TOOLS.md  MCP_USER_GUIDE.md  PLAN_PERSISTENCE.md  PR_SPRINT_N2.md  README.md  USO_TRAE.md  pyproject.toml
src/agy_mcp_server/: changes.py  hardening.py  models.py  provider.py  quota.py  rolling_buffer.py  run_store.py  server.py  settings.py  timeout_policy.py
src/agy_mcp_server/persistence/: __init__.py  context.py  locks.py  paths.py  store.py  templates.py
tests/: test_contrato_drift.py  test_integration_contract.py  test_persistence.py  test_persistence_context.py  test_persistence_integration.py  test_persistence_location.py  test_prompt_drift_guard.py  test_provider.py  test_quota.py  test_quota_enforcement.py  test_quota_response.py  test_secret_drift_guard.py  test_security.py  test_self_test.py  test_timeout_policy.py
tools/: agy_smoke.py  mcp_direct.py
